# arxiv-pdf

./: .gitignore  README.md  model_config.toml  pyproject.toml
arxiv_pdf/: __init__.py  model.py
scripts/: check.sh
tests/: test_model.py
